fixed css overflow

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body {
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+
 td {
     border: 1px solid black;
     height: 20px;
